added user name and pasword for bloc.io

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 https://www.bloc.io/users/souphan-keodouangkham/checkpoints/1361?roadmap_section_id=95
 <br>
 https://www.bloc.io/resources/git-checkpoint-workflow
-    
-           
+    <br>
+           bloc.io username and password:
+    <br>
+           souphan.ctr@gmail.com
+    <br>
+           !QAZ1qaz
 
 <script src="/scripts/app.js"></script>
 
