updated index.html daily tasks

--- a/code4fun/app/pages/index.html
+++ b/code4fun/app/pages/index.html
@@ -23,8 +23,11 @@
         <li>Meeting with mentor John</li>
         <li>worked out today</li>
         <li>Continue working on my todo list app for checkpoint 5</li>
-        <li></li>
-        <li></li>
+    </ul>
+    <ul>
+        <li>February 9</li>
+        <li>Completed 8 Freecodecamp assignments</li>
+        <li>Starting Ennovar workshop today</li>
     </ul>
 
     
